--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.jumbo-house {
+  background-image: url('https://images.pexels.com/photos/280229/pexels-photo-280229.jpeg?cs=srgb&dl=pexels-pixabay-280229.jpg&fm=jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
