FH Realty project description.

--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,7 @@
 .nav-item > .active {
   border-bottom: 1px solid #333;
 }
+
+.main-text {
+  text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+}
