Removed progress bars in skills component.

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,8 @@
 .main-text {
   text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 }
+
+.skills-list {
+  width: 230px;
+  justify-content: center;
+}
