--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,10 @@
   font-family: 'Mukta', sans-serif;
 }
 
+body {
+  background-color: #fff;
+}
+
 a:hover {
   color: orange;
 }
@@ -32,7 +36,7 @@ a:hover {
 }
 
 .jumbo-house {
-  background-image: url('https://images.pexels.com/photos/280229/pexels-photo-280229.jpeg?cs=srgb&dl=pexels-pixabay-280229.jpg&fm=jpg');
+  background-image: url('https://images.unsplash.com/photo-1587637970934-a09453665678?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
