--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,7 +81,7 @@ a:hover {
   background-size: cover;
 }
 .jumbo-contact {
-  background-image: url('https://images.unsplash.com/photo-1594155840350-fac3cc4b6816?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');
+  background-image: url('https://goodereader.com/blog/uploads/images/Where-to-Sell-Comic-Books.jpg.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
